update to java 11 and sonar scanner 4.5.0